--- a/colaboradores.css
+++ b/colaboradores.css
@@ -44,6 +44,7 @@ h2, h3, h4{
 body{
     background-image: url(imgs/colab-mf.png);
     backdrop-filter: blur(10px);
+    background-size:100vw;
 }
 
 
